@@ -12,3 +12,4 @@
 fr atarist
 de atarist
 cs latin2
+es atarist
